--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ prueba.server.mongo.aut=0
 prueba.server.mongo.host=localhost
 prueba.server.mongo.usr=<MONGO_USER>
 prueba.server.mongo.pwd=<MONGO_PASS>
-prueba.server.mongo.db=prueba
+prueba.server.mongo.db=core
